<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.smartdropbox.home.ui.home.HomeViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_box_id_"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:visibility="gone"

                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1.5"
                android:gravity="center"
                >
                <!--app:hintTextAppearance="@style/TextLabel"-->
                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/enter_drop_box_id_here"
                    android:text="@={viewModel.homeModel.boxId}" />

            </com.google.android.material.textfield.TextInputLayout>
            <EditText
                android:id="@+id/etDropBoxId"
                android:layout_width="match_parent"
                android:hint="@string/enter_drop_box_id_here"
                android:padding="@dimen/_7sdp"
                android:text="@={viewModel.homeModel.boxId}"
                android:singleLine="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1.5"
                android:background="@drawable/edittext_border"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/imgBoxIdScanner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="8.5"
                android:onClick="@{viewModel::onDropBoxScannerClick}"

                android:src="@drawable/ic_scanner" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/enter_device_id_here"
                    android:text="@={viewModel.homeModel.deviceId}" />

            </com.google.android.material.textfield.TextInputLayout>
            <EditText
                android:id="@+id/etDeviceId"
                android:layout_width="match_parent"

                android:padding="@dimen/_7sdp"
                android:hint="@string/enter_device_id_here"
                android:text="@={viewModel.homeModel.deviceId}"
                android:singleLine="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1.5"
                android:background="@drawable/edittext_border"
                android:layout_height="wrap_content"/>

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_weight="8.5"
                android:onClick="@{viewModel::onDeviceIdClick}"
                android:src="@drawable/ic_scanner" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"

                >

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:text="@={viewModel.homeModel.name}"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name_here" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:padding="@dimen/_7sdp"
                android:hint="@string/enter_name_here"
                android:text="@={viewModel.homeModel.name}"
                android:singleLine="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1.5"
                android:background="@drawable/edittext_border"
                android:layout_height="wrap_content"/>
            <View
                android:visibility="invisible"
                android:layout_weight="8.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1.5"

                >

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/enter_address_here"
                    android:text="@={viewModel.homeModel.address}" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:padding="@dimen/_7sdp"
                android:hint="@string/enter_address_here"
                android:text="@={viewModel.homeModel.address}"
                android:singleLine="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1.5"
                android:background="@drawable/edittext_border"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="8.5"
                android:onClick="@{viewModel::onAddressClick}"
                android:src="@drawable/ic_retry" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_corner"
            android:onClick="@{viewModel::onActivateClick}"
            android:text="@string/activate"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnInstallation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corner_white"
            android:text="@string/installation_manual"
            android:textColor="@color/app_color"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
</layout>
